добавил View отреоктировал program

--- a/BlogApplication/View/Pages/Shared/_Layout.cshtml
+++ b/BlogApplication/View/Pages/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-        <@ViewData["Title"] - BlogApp
+        <@ViewData["Title"] - BlogApplication
     </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BlogApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/BlogApplication.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - BlogApp - <a asp-area="" asp-page="/Home/Privacy">Privacy</a>
+            &copy; 2023 - BlogApplication - <a asp-area="" asp-page="/Home/Privacy">Privacy</a>
         </div>
     </footer>
 
