--- a/BlogApplication/View/Pages/StartPages/_LayoutStart.cshtml
+++ b/BlogApplication/View/Pages/StartPages/_LayoutStart.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BlogApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/BlogApplication.styles.css" asp-append-version="true" />
 </head>
 <header>
     <a class="navbar-brand" asp-page="/StartPages/Index">Персональный блог</a>
