--- a/BlogApplication/View/Pages/Index.cshtml
+++ b/BlogApplication/View/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @{
-  //  Layout = "~/View/Pages/StartPages/_LayoutStart.cshtml";
-   // ViewData["Title"] = "Welcome";
+    Layout = "~/View/Pages/StartPages/_LayoutStart.cshtml";
+    ViewData["Title"] = "Welcome";
 }
 <h2>Вы уже зарегестрированны? <a asp-page="/StartPages/Login">Войти</a></h2>
 <h2>Здесь вы можете  <a asp-page="/StartPages/Register">зарегистрироваться</a></h2>
